# prefix-square

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_square/: apps.py  payment.py  signals.py
pretix_square/locale/de/LC_MESSAGES/: django.po
pretix_square/static/pretix_square/: pretix_square.js
pretix_square/templates/pretix_square/: checkout_payment_confirm.html  checkout_payment_form_card.html  presale_head.html
